[package]
name = "course-video-dl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.17.4"
anyhow = "1.0.43"
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
reqwest = "*"

[features]
default = ["script"]
script = []